deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: karridin/homework-2:1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8000
            initialDelaySeconds: 2
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            initialDelaySeconds: 2
