deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-app
spec:
  ports:
    - name: 80tcp
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: hello-app
  type: ClusterIP
